Fix missing border

--- a/gnome-shell/src/gnome-shell-sass/widgets/_notifications.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_notifications.scss
@@ -32,7 +32,7 @@ $notification_banner_radius: $base_border_radius*1.5;
   // Yaru: make notifications more visible on different headerbars:
   &, &:hover, &:focus, &:active {
     box-shadow: 0 1px 3px 1px transparentize(black, 0.8);
-    border-color: $borders_color;
+    border: 1px solid $borders_color;
   }
 }
 
